Added placeholder page for watchlist, and made each user's username display in the url

--- a/test_app/templates/test_app/loginPage.html
+++ b/test_app/templates/test_app/loginPage.html
@@ -6,7 +6,7 @@
 <body>
     <h1>Please enter your login information</h1><br/>
     <h2>{{error_message}}</h2>
-    <form action="{% url 'main_page'  %}" method="POST">
+    <form action="{% url 'login_attempt'  %}" method="POST">
         {% csrf_token %}
         <p>Username</p>
         <input type="text" name="username"/><br/>
