Added placeholder pages for user and analyst registration

--- a/test_app/templates/test_app/loginPage.html
+++ b/test_app/templates/test_app/loginPage.html
@@ -14,6 +14,16 @@
         <input type="password" name="password"/><br/>
         <input type="submit" value="Login"/>
     </form>
+    <h3>Register an Account</h3>
+    <form action ="{% url 'register_user' %}" method="POST">
+        {% csrf_token %}
+        <input type="submit" value="Register as a User"/>
+    </form>
+    <h3>Register an Analyst Account</h3>
+    <form action ="{% url 'register_analyst' %}" method="POST">
+        {% csrf_token %}
+        <input type="submit" value="Register as an Analyst"/>
+    </form>
 
 </body>
 </html>
