Added function between searching a ticker and getting a response to handle the request. The stock info page will now display the user's username and the ticker in teh URL. Added a button for adding stocks to watchlist (no functionality yet)

--- a/test_app/templates/test_app/stock_info.html
+++ b/test_app/templates/test_app/stock_info.html
@@ -16,5 +16,9 @@
         {% csrf_token %}
         <input type="submit" value="View Puts">
     </form>
+    <form action="{% url 'add_to_watchlist' username ticker %}" method="POST">
+        {% csrf_token %}
+        <input type="submit" value="Add Stock To Watchlist"/>
+    </form>
 </body>
 </html>
