--- a/test_app/templates/test_app/main_page.html
+++ b/test_app/templates/test_app/main_page.html
@@ -7,7 +7,7 @@
     <h1>Welcome {{username}}</h1><br/>
     <h2>{{error_message}}</h2><br/>
     <h3>Search a Ticker</h3>
-    <form action="{% url 'view_selected_stock'  %}" method="POST">
+    <form action="{% url 'searching_ticker' username %}" method="POST">
         {% csrf_token %}
         <input type="text" name="ticker"/>
         <input type="submit" name="submit"/><br/>
