Added watchlist functionality and for the watchlist page to display what is on there. Proper display format still needed.

--- a/test_app/templates/test_app/watchlist.html
+++ b/test_app/templates/test_app/watchlist.html
@@ -3,6 +3,13 @@
     <title>Stock Watchlist</title>
 </head>
 <body>
-    <p>Coming Soon</p>
+    <h1>My Watchlist</h1>
+    <ul>
+        {% for entry in watchlist %}
+            <li>
+                {{entry.ticker}}
+            </li>
+        {% endfor %}
+    </ul>
 </body>
 </html>
