Base formatting for watchlist added.

--- a/test_app/templates/test_app/watchlist.html
+++ b/test_app/templates/test_app/watchlist.html
@@ -4,12 +4,12 @@
 </head>
 <body>
     <h1>My Watchlist</h1>
-    <ul>
         {% for entry in watchlist %}
-            <li>
-                {{entry.ticker}}
-            </li>
+            <br>
+                {{entry.ticker.ticker}}</br>
+                {{entry.ticker.name}} </br>
+                {{entry.ticker.current_value}}
+            </p>
         {% endfor %}
-    </ul>
 </body>
 </html>
