--- a/test_app/templates/test_app/loginPage.html
+++ b/test_app/templates/test_app/loginPage.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Please enter your login information</h1><br/>
-    <h2>{{error_message}}</h2>
+    <h2>{{message}}</h2>
     <form action="{% url 'login_attempt'  %}" method="POST">
         {% csrf_token %}
         <p>Username</p>
