--- a/test_app/templates/test_app/main_page.html
+++ b/test_app/templates/test_app/main_page.html
@@ -4,21 +4,21 @@
     <title>Main Page</title>
 </head>
 <body>
-    <h1>Welcome {{username}}</h1><br/>
-    <h2>{{error_message}}</h2><br/>
+    <h1>Welcome {{username}}</h1><br>
+    <h2>{{error_message}}</h2><br>
     <h3>Search a Ticker</h3>
-    <form action="{% url 'searching_ticker' username %}" method="POST">
+    <form action="{% url 'searching_ticker' %}" method="POST">
         {% csrf_token %}
         <input type="text" name="ticker"/>
         <input type="submit" name="submit"/><br/>
     </form>
     <h3>View My Watchlist</h3>
-    <form action="{% url 'watchlist' username %}" method="POST">
+    <form action="{% url 'watchlist' %}" method="POST">
         {% csrf_token %}
         <input type="submit" name="watchlist" value="View"/>
     </form>
     <h3>View Viewed History</h3>
-    <form action="{% url 'viewed_history' username %}" method="POST">
+    <form action="{% url 'viewed_history' %}" method="POST">
         {% csrf_token %}
         <input type="submit" name="viewed_history" value="View"/>
     </form>
