--- a/test_app/templates/test_app/calls_info.html
+++ b/test_app/templates/test_app/calls_info.html
@@ -4,6 +4,15 @@
     <title>Calls Information</title>
 </head>
 <body>
-    <h1>Once calls are working, they will be here</h1>
+    <h1>{{ticker}} Calls Expiring Within The Next Seven Days</h1>
+    {% for entry in call_list %}
+    <hr>
+        <h3>{{entry.get_date}}</h3>
+        <p>Strike Price    Bid    Ask    Premium</p>
+        {% for call in entry.get_calls %}
+            <p>${{call.strike_price}}    ${{call.bid}}    ${{call.ask}}    ${{call.premium}}</p>
+        {% endfor %}
+        <hr>
+    {% endfor %}
 </body>
 </html>
