--- a/test_app/templates/test_app/stock_info.html
+++ b/test_app/templates/test_app/stock_info.html
@@ -16,7 +16,7 @@
         {% csrf_token %}
         <input type="submit" value="View Puts">
     </form>
-    <form action="{% url 'add_to_watchlist' username ticker %}" method="POST">
+    <form action="{% url 'add_to_watchlist' ticker %}" method="POST">
         {% csrf_token %}
         <input type="submit" value="Add Stock To Watchlist"/>
     </form>
