--- a/test_app/templates/test_app/puts_info.html
+++ b/test_app/templates/test_app/puts_info.html
@@ -4,6 +4,15 @@
     <title>Puts Information</title>
 </head>
 <body>
-    <h1>Once puts are working, they will be here</h1>
+    <h1>{{ticker}} Puts Expiring Within The Next Seven Days</h1>
+    {% for entry in put_list %}
+    <hr>
+        <h3>{{entry.get_date}}</h3>
+        <p>Strike Price    Bid    Ask    Premium</p>
+        {% for put in entry.get_puts %}
+            <p>${{put.strike_price}}    ${{put.bid}}    ${{put.ask}}    ${{put.premium}}</p>
+        {% endfor %}
+        <hr>
+    {% endfor %}
 </body>
 </html>
