--- a/test_app/templates/test_app/register_analyst.html
+++ b/test_app/templates/test_app/register_analyst.html
@@ -1,6 +1,9 @@
+{% load static %}
+
 <html>
 <head>
     <title>Register Analyst</title>
+    <link rel="stylesheet" href="{% static 'test_app/style.css' %}">
 </head>
 <body>
     <h1>Register as an Analyst</h1>
