--- a/test_app/templates/test_app/watchlist.html
+++ b/test_app/templates/test_app/watchlist.html
@@ -1,6 +1,9 @@
+{% load static %}
+
 <html>
 <head>
     <title>Stock Watchlist</title>
+    <link rel="stylesheet" href="{% static 'test_app/style.css' %}">
 </head>
 <body>
     <h1>My Watchlist</h1>
