--- a/test_app/static/test_app/style.css
+++ b/test_app/static/test_app/style.css
@@ -37,3 +37,24 @@ input:focus{
 .error{
     color:rgb(109, 38, 38);
 }
+
+table{
+    /* border: 2px solid white; */
+    grid-column: 2px solid white;
+    align-self: center;
+    margin-left: auto;
+    margin-right: auto;
+    border-spacing: 0px;
+}
+
+td, th{
+    font-size: x-large;
+    border-right:1px solid grey;
+    border-left:1px solid grey;
+    padding: 6px;
+    padding-right: 12px;
+}
+
+th{
+    border-bottom: 2px solid grey;
+}
