--- a/test_app/templates/test_app/loginPage.html
+++ b/test_app/templates/test_app/loginPage.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <html>
 <head>
     <title>Login</title>
@@ -6,24 +7,24 @@
 </head>
 <body>
     <h1>Please enter your login information</h1><br/>
-    <h2>{{message}}</h2>
-    <form action="{% url 'login_attempt' %}" method="POST">
+    <h2 class="error">{{message}}</h2>
+    <form action="{% url 'login_attempt'  %}" method="POST">
         {% csrf_token %}
         <p>Username</p>
         <input type="text" name="username"/><br>
         <p>Password</p>
         <input type="password" name="password"/><br>
-        <input type="submit" value="Login"/>
+        <input type="submit" value="Login" class = "button submit"/>
     </form>
     <h3>Register an Account</h3>
     <form action ="{% url 'register_user' %}" method="POST">
         {% csrf_token %}
-        <input type="submit" value="Register as a User"/>
+        <input type="submit" value="Register as a User" class = "button"/>
     </form>
     <h3>Register an Analyst Account</h3>
     <form action ="{% url 'register_analyst' %}" method="POST">
         {% csrf_token %}
-        <input type="submit" value="Register as an Analyst"/>
+        <input type="submit" value="Register as an Analyst" class = "button"/>
     </form>
 
 </body>
