--- a/test_app/templates/test_app/main_page.html
+++ b/test_app/templates/test_app/main_page.html
@@ -1,7 +1,9 @@
+{% load static %}
 
 <html>
 <head>
     <title>Main Page</title>
+    <link rel="stylesheet" href="{% static 'test_app/style.css' %}">
 </head>
 <body>
     <h1>Welcome {{username}}</h1><br>
