--- a/test_app/templates/test_app/register_user.html
+++ b/test_app/templates/test_app/register_user.html
@@ -1,6 +1,9 @@
+{% load static %}
+
 <html>
 <head>
     <title>Register User</title>
+    <link rel="stylesheet" href="{% static 'test_app/style.css' %}">
 </head>
 <body>
     <h1>Register as a User</h1>
