--- a/test_app/templates/test_app/testStock.html
+++ b/test_app/templates/test_app/testStock.html
@@ -1,7 +1,9 @@
+{% load static %}
 
 <html>
 <head>
     <title>Microsoft</title>
+    <link rel="stylesheet" href="{% static 'test_app/style.css' %}">
 </head>
 <body>
     <h1>
