--- a/test_app/templates/test_app/viewed_history.html
+++ b/test_app/templates/test_app/viewed_history.html
@@ -1,8 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
         "http://www.w3.org/TR/html4/loose.dtd">
+{% load static %}
+
 <html>
 <head>
     <title>Viewed History</title>
+    <link rel="stylesheet" href="{% static 'test_app/style.css' %}">
 </head>
 <body>
     <p>Coming Soon</p>
