--- a/test_app/templates/test_app/puts_info.html
+++ b/test_app/templates/test_app/puts_info.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>{{ticker}} Puts Expiring Within The Next Seven Days</h1>
+    <form action="{% url 'main_page' %}" method="POST">
+        {% csrf_token %}
+        <input type="submit" value="Return to Main Page"/>
+    </form>
     {% for entry in put_list %}
         <h3>{{entry.get_date}}</h3>
         <table>
