--- a/test_app/templates/test_app/stock_info.html
+++ b/test_app/templates/test_app/stock_info.html
@@ -7,9 +7,15 @@
 </head>
 <body>
     <h1>Stock information</h1>
+    <form action="{% url 'main_page' %}" method="POST">
+        {% csrf_token %}
+        <input type="submit" value="Return to Main Page"/>
+    </form>
     <h2>{{error_message}}</h2>
     <h2>{{ticker}}</h2>
-    <h3>{{value}}</h3>
+    <h3>{{stock.name}}</h3>
+    <h3>${{stock.current_value}}</h3>
+    <h5>Ex Dividend Date: {{stock.ex_dividend_date}} | Dividend Amount: ${{stock.dividend_amount}}</h5>
     <form action="{% url 'calls_information' ticker %}" method="POST">
         {% csrf_token %}
         <input type="submit" value="View Calls">
