--- a/test_app/templates/test_app/viewed_history.html
+++ b/test_app/templates/test_app/viewed_history.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="{% static 'test_app/style.css' %}">
 </head>
 <body>
-    <p>Coming Soon</p>
+    <h2>Last 10 Searches for {{username}}</h2>
+    <form action="{% url 'main_page' %}" method="POST">
+        {% csrf_token %}
+        <input type="submit" value="Return to Main Page"/>
+    </form>
+    {% for record in history_list %}
+        <h5> {{record.ticker.ticker}} {{record.date_viewed}}</h5>
+            <form action="{% url 'viewed_history_search' %}" method="POST">
+                {% csrf_token %}
+                <input type="submit" name="{{record.ticker.ticker}}" value="View information for this stock"/>
+            </form>
+    {% endfor %}
 </body>
 </html>
