--- a/test_app/templates/test_app/watchlist.html
+++ b/test_app/templates/test_app/watchlist.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>My Watchlist</h1>
+    <form action="{% url 'main_page' %}" method="POST">
+        {% csrf_token %}
+        <input type="submit" value="Return to Main Page"/>
+    </form>
     <hr>
         {% for entry in watchlist %}
             <h3>
