Made things look nice

--- a/test_app/static/test_app/stockInfo.css
+++ b/test_app/static/test_app/stockInfo.css
@@ -14,14 +14,11 @@ input{
     font-size: large;
 }
 
-input[type=submit]{
+input[type=sumbit]{
     border-width: 4px;
+    padding: 4px;
     border-style:outset;
     margin-top: -20px;
-}
-
-input[type=text]{
-    border-style: hidden;
 }
 
 input.submit{
@@ -37,31 +34,23 @@ input:focus{
     color:gray;
 }
 
-.error{
-    color:rgb(109, 38, 38);
+#puts{
+    margin-left: 10%;
+    margin-block-start: -53px;
 }
 
-table{
-    /* border: 2px solid white; */
-    grid-column: 2px solid white;
-    align-self: center;
-    margin-left: auto;
-    margin-right: auto;
-    border-spacing: 0px;
+#calls{
+    margin-right: 10%;
 }
 
-td, th{
-    font-size: x-large;
-    border-right:1px solid grey;
-    border-left:1px solid grey;
-    padding: 6px;
-    padding-right: 12px;
-}
-
-th{
-    border-bottom: 2px solid grey;
+h2{
+    font-size: 300%;
 }
 
 .money{
     color: rgb(90, 170, 80);
+}
+
+.err{
+    font-size: larger;
 }
