--- a/test_app/templates/test_app/stock_info.html
+++ b/test_app/templates/test_app/stock_info.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>Stock Information</title>
-    <link rel="stylesheet" href="{% static 'test_app/style.css' %}">
+    <link rel="stylesheet" href="{% static 'test_app/stockInfo.css' %}">
 </head>
 <body>
     <h1>Stock information</h1>
@@ -11,17 +11,18 @@
         {% csrf_token %}
         <input type="submit" value="Return to Main Page"/>
     </form>
-    <h2>{{error_message}}</h2>
+    <h2 class="err">{{error_message}}</h2>
     <h2>{{ticker}}</h2>
     <h3>{{stock.name}}</h3>
-    <h3>${{stock.current_value}}</h3>
-    <h5>Ex Dividend Date: {{stock.ex_dividend_date}} | Dividend Amount: ${{stock.dividend_amount}}</h5>
+    <h3 class="money">${{stock.current_value}}</h3>
+    <h5>Ex Dividend Date: {{stock.ex_dividend_date}} |
+        Dividend Amount: <span class="money">${{stock.dividend_amount}}</span></h5>
     <h5>Exchange: {{exchange.exchange_id}} | Exchange Timezone: {{exchange.exchange_timezone}}</h5>
-    <form action="{% url 'calls_information' ticker %}" method="POST">
+    <form action="{% url 'calls_information' ticker %}" method="POST" id="calls">
         {% csrf_token %}
         <input type="submit" value="View Calls">
     </form>
-    <form action="{% url 'puts_information' ticker %}" method="POST">
+    <form action="{% url 'puts_information' ticker %}" method="POST" id="puts">
         {% csrf_token %}
         <input type="submit" value="View Puts">
     </form>
