--- a/test_app/templates/test_app/viewed_history.html
+++ b/test_app/templates/test_app/viewed_history.html
@@ -5,7 +5,7 @@
 <html>
 <head>
     <title>Viewed History</title>
-    <link rel="stylesheet" href="{% static 'test_app/style.css' %}">
+    <link rel="stylesheet" href="{% static 'test_app/history.css' %}">
 </head>
 <body>
     <h2>Last 10 Searches for {{username}}</h2>
@@ -14,10 +14,10 @@
         <input type="submit" value="Return to Main Page"/>
     </form>
     {% for record in history_list %}
-        <h5> {{record.ticker.ticker}} {{record.date_viewed}}</h5>
+        <h5> <em>{{record.ticker.ticker}}</em> | {{record.date_viewed}}</h5>
             <form action="{% url 'viewed_history_search' %}" method="POST">
                 {% csrf_token %}
-                <input type="submit" name="{{record.ticker.ticker}}" value="View information for this stock"/>
+                <input type="submit" name="{{record.ticker.ticker}}" value="View stock info" class="view"/>
             </form>
     {% endfor %}
 </body>
