--- a/test_app/templates/test_app/stock_info.html
+++ b/test_app/templates/test_app/stock_info.html
@@ -11,6 +11,10 @@
         {% csrf_token %}
         <input type="submit" value="Return to Main Page"/>
     </form>
+    <form action="{% url 'display_histogram' ticker %}" method="POST">
+        {% csrf_token %}
+        <input type="submit" value="View Histogram"/>
+    </form>
     <h2 class="err">{{error_message}}</h2>
     <h2>{{ticker}}</h2>
     <h3>{{stock.name}}</h3>
