--- a/test_app/templates/test_app/register_analyst.html
+++ b/test_app/templates/test_app/register_analyst.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>Register Analyst</title>
-    <link rel="stylesheet" href="{% static 'test_app/style.css' %}">
+    <link rel="stylesheet" href="{% static 'test_app/register.css' %}">
 </head>
 <body>
     <h1>Register as an Analyst</h1>
