--- a/test_app/templates/test_app/view_analysis.html
+++ b/test_app/templates/test_app/view_analysis.html
@@ -1,6 +1,9 @@
+{% load static %}
+
 <html>
 <head>
     <title>{{title}}</title>
+    <link rel="stylesheet" href="{% static 'test_app/style.css' %}">
 </head>
 <body>
     <h1>Analysis Title: {{title}}</h1>
