--- a/test_app/templates/test_app/register_user.html
+++ b/test_app/templates/test_app/register_user.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>Register User</title>
-    <link rel="stylesheet" href="{% static 'test_app/style.css' %}">
+    <link rel="stylesheet" href="{% static 'test_app/register.css' %}">
 </head>
 <body>
     <h1>Register as a User</h1>
